--- a/pages/css/globals.scss
+++ b/pages/css/globals.scss
@@ -6,9 +6,12 @@
 
 * {
   font-family: 'virgil_3_yoffregular';
+  box-sizing: border-box;
 }
 
+html,
 body {
-  // background-color: #f5f5f5;
+  padding: 0;
+  margin: 0;
   background-color: rgb(251 207 232);
 }
